# sorayori

./: .gitignore  README.md  index.html  package-lock.json  package.json  rules.md  vite.config.ts
.github/workflows/: android-release.yml
src/: App.tsx  format.ts  i18n.ts  styles.css  types.ts  weather.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  weather.rs
src/components/: AppPanels.tsx  WeatherDashboard.tsx
