[package]
name = "sorayori"
version = "0.1.0"
description = "A quiet weather app"
authors = ["Sakayori Studio"]
edition = "2021"

[lib]
name = "sorayori_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-geolocation = "2"
tokio = { version = "1", features = ["fs"] }
